fix(rsrch): re-enable auth.json mount

--- a/infrastruct/nomad_stack/roles/nomad_jobs/templates/rsrch.nomad.hcl.j2
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/templates/rsrch.nomad.hcl.j2
@@ -34,27 +34,27 @@ job "rsrch" {
       }
 
       # Vault integration for secrets
-      vault {
-        policies = ["agents"]
-      }
+      # vault {
+      #   policies = ["agents"]
+      # }
 
       # Inject secrets from Vault as environment variables
-      template {
-        data = <<EOF
-{{- with secret "secret/data/agents/windmill" }}
-WINDMILL_TOKEN={{ .Data.data.token }}
-WINDMILL_URL=http://localhost:8000
-WINDMILL_WORKSPACE=main
-{{- end }}
-{{- with secret "secret/data/agents/langfuse" }}
-LANGFUSE_PUBLIC_KEY={{ .Data.data.public_key }}
-LANGFUSE_SECRET_KEY={{ .Data.data.secret_key }}
-LANGFUSE_HOST=http://localhost:3200
-{{- end }}
-EOF
-        destination = "secrets/vault.env"
-        env         = true
-      }
+      # template {
+      #   data = <<EOF
+      # {{- with secret "secret/data/agents/windmill" }}
+      # WINDMILL_TOKEN={{ .Data.data.token }}
+      # WINDMILL_URL=http://localhost:8000
+      # WINDMILL_WORKSPACE=main
+      # {{- end }}
+      # {{- with secret "secret/data/agents/langfuse" }}
+      # LANGFUSE_PUBLIC_KEY={{ .Data.data.public_key }}
+      # LANGFUSE_SECRET_KEY={{ .Data.data.secret_key }}
+      # LANGFUSE_HOST=http://localhost:3200
+      # {{- end }}
+      # EOF
+      #   destination = "secrets/vault.env"
+      #   env         = true
+      # }
 
       env {
         PORT = "3030"
