fix(nomad): escape Vault template syntax for Ansible
Added {% raw %} / {% endraw %} blocks around Nomad Vault template
to prevent Ansible's Jinja2 from interpreting the {{ }} syntax.

--- a/infrastruct/nomad_stack/roles/nomad_jobs/templates/rsrch.nomad.hcl.j2
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/templates/rsrch.nomad.hcl.j2
@@ -41,6 +41,7 @@ job "rsrch" {
       # Inject secrets from Vault as environment variables
       template {
         data = <<EOF
+{% raw %}
 {{- with secret "secret/data/agents/windmill" }}
 WINDMILL_TOKEN={{ .Data.data.token }}
 WINDMILL_URL=http://localhost:8000
@@ -51,6 +52,7 @@ LANGFUSE_PUBLIC_KEY={{ .Data.data.public_key }}
 LANGFUSE_SECRET_KEY={{ .Data.data.secret_key }}
 LANGFUSE_HOST=http://localhost:3200
 {{- end }}
+{% endraw %}
 EOF
         destination = "secrets/vault.env"
         env         = true
