--- a/infrastruct/nomad_stack/roles/nomad_jobs/templates/rsrch.nomad.hcl.j2
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/templates/rsrch.nomad.hcl.j2
@@ -33,30 +33,23 @@ job "rsrch" {
         ]
       }
 
-      # Vault integration for secrets
-      vault {
-        policies = ["agents"]
-      }
-
-      # Inject secrets from Vault as environment variables
-      template {
-        data = <<EOF
-{% raw %}
-{{- with secret "secret/data/agents/windmill" }}
-WINDMILL_TOKEN={{ .Data.data.token }}
-WINDMILL_URL=http://localhost:8000
-WINDMILL_WORKSPACE=knowlage
-{{- end }}
-{{- with secret "secret/data/agents/langfuse" }}
-LANGFUSE_PUBLIC_KEY={{ .Data.data.public_key }}
-LANGFUSE_SECRET_KEY={{ .Data.data.secret_key }}
-LANGFUSE_HOST=http://localhost:3200
-{{- end }}
-{% endraw %}
-EOF
-        destination = "secrets/vault.env"
-        env         = true
-      }
+      # Vault integration for secrets (DISABLED: Nomad 1.10.5 Workload Identity issues)
+      # TODO: Re-enable when Nomad/Vault WI is properly configured
+      # vault {
+      #   policies = ["agents"]
+      # }
+      #
+      # template {
+      #   data = <<EOF
+      # {% raw %}
+      # {{- with secret "secret/data/agents/windmill" }}
+      # WINDMILL_TOKEN={{ .Data.data.token }}
+      # ...
+      # {% endraw %}
+      # EOF
+      #   destination = "secrets/vault.env"
+      #   env         = true
+      # }
 
       env {
         PORT = "3030"
@@ -66,6 +59,10 @@ EOF
         DEBUG = "rsrch:*"
         FALKORDB_HOST = "localhost"
         FALKORDB_PORT = "6379"
+        # Windmill token from Vault - temporarily hardcoded until WI issues resolved
+        WINDMILL_TOKEN = "{{ windmill_token | default('') }}"
+        WINDMILL_URL = "http://localhost:8000"
+        WINDMILL_WORKSPACE = "knowlage"
       }
 
 
