fix(infra): Fix Traefik routing with HTTPS/Let's Encrypt
- Set public_ip=130.61.225.114 in group_vars/servers.yml
- Updated YouTrack, Obsidian, Goose, Windmill to use websecure entrypoint
- Added tls.certresolver=letsencrypt to all services
- Removed PathPrefix fallback routes (not compatible with HTTPS redirect)

--- a/infrastruct/nomad_stack/roles/nomad_jobs/templates/goose.nomad.hcl.j2
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/templates/goose.nomad.hcl.j2
@@ -68,8 +68,9 @@ job "goose" {
           "goose",
           "ai-agent",
           "traefik.enable=true",
-          "traefik.http.routers.goose.rule=Host(`goose.{{ traefik_domain | default('100.73.45.27.nip.io') }}`)",
-          "traefik.http.routers.goose.entrypoints=web",
+          "traefik.http.routers.goose.rule=Host(`goose.{{ public_ip | default(ansible_default_ipv4.address) }}.nip.io`)",
+          "traefik.http.routers.goose.entrypoints=websecure",
+          "traefik.http.routers.goose.tls.certresolver=letsencrypt",
           "traefik.http.services.goose.loadbalancer.server.port=3099"
         ]
         
