fix(infra): Fix rsrch-browser Consul health checks
- Added static port definitions (vnc=5900, cdp=9223) to network block
- Changed service address_mode from 'driver' to 'host' with port labels
- Fixed Chrome profile permissions (chown 1200:1201) on halvarm
- Resolves empty service address causing health check failures

--- a/infrastruct/nomad_stack/roles/nomad_jobs/templates/rsrch-browser.nomad.hcl.j2
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/templates/rsrch-browser.nomad.hcl.j2
@@ -12,6 +12,14 @@ job "rsrch-browser" {
 
     network {
       mode = "host"
+      
+      port "vnc" {
+        static = 5900
+      }
+      
+      port "cdp" {
+        static = 9223
+      }
     }
 
     constraint {
@@ -52,8 +60,8 @@ job "rsrch-browser" {
 
       service {
         name         = "rsrch-browser-vnc"
-        port         = 5900
-        address_mode = "driver"
+        port         = "vnc"
+        address_mode = "host"
         tags         = ["browser", "vnc"]
       }
     }
@@ -82,15 +90,14 @@ job "rsrch-browser" {
 
       service {
         name         = "rsrch-browser-cdp"
-        port         = 9223
-        address_mode = "driver"
+        port         = "cdp"
+        address_mode = "host"
         tags         = ["browser", "cdp", "rsrch"]
         
         check {
           name         = "cdp-health"
           type         = "http"
           path         = "/json/version"
-          address_mode = "driver"
           interval     = "30s"
           timeout      = "10s"
         }
