feat(ansible): Ghostty AppImage, Nushell, Fonts

--- a/infrastruct/ansible/roles/ghostty/templates/config.j2
+++ b/infrastruct/ansible/roles/ghostty/templates/config.j2
@@ -33,6 +33,9 @@ gtk-wide-tabs = true
 
 # Shell integration
 shell-integration = {{ ghostty_shell_integration }}
+{% if ghostty_command %}
+command = {{ ghostty_command }}
+{% endif %}
 
 # Performance
 scrollback-limit = {{ ghostty_scrollback_limit }}
