--- a/infrastruct/ansible/roles/zellij/templates/config.kdl.j2
+++ b/infrastruct/ansible/roles/zellij/templates/config.kdl.j2
@@ -286,7 +286,7 @@ web_client {
 // Choose the theme that is specified in the themes section.
 // Default: default
 // 
-theme "{{ zellij_theme | default('nord') }}"
+// theme "{{ zellij_theme | default('nord') }}"
  
 // Choose the base input mode of zellij.
 // Default: normal
