chore: enable nushell in wezterm

--- a/infrastruct/ansible/roles/wezterm/templates/wezterm.lua.j2
+++ b/infrastruct/ansible/roles/wezterm/templates/wezterm.lua.j2
@@ -71,7 +71,7 @@ config.cursor_blink_ease_out = 'Constant'
 config.cursor_blink_rate = 0 -- Disable blinking to match ghostty config `cursor-style-blink = false`
 
 -- Shell
--- Use the same shell as user's default or configured one
--- config.default_prog = { '/usr/bin/zsh' } 
+-- Use Nushell to match Ghostty configuration
+config.default_prog = { '/home/sim/.local/bin/nu' }
 
 return config
