--- a/infrastruct/ansible/roles/wezterm/templates/wezterm.lua.j2
+++ b/infrastruct/ansible/roles/wezterm/templates/wezterm.lua.j2
@@ -71,7 +71,7 @@ config.cursor_blink_ease_out = 'Constant'
 config.cursor_blink_rate = 0 -- Disable blinking to match ghostty config `cursor-style-blink = false`
 
 -- Shell
--- Use Nushell to match Ghostty configuration
-config.default_prog = { '/home/sim/.local/bin/nu' }
+-- Use Zsh as default
+config.default_prog = { '/usr/bin/zsh' }
 
 return config
